

[gd_scene load_steps=12 format=2]



[ext_resource path="res://Levels/Main/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/CutiePatootie-Rgjv.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/HealthBarRed.png" type="Texture" id=3]
[ext_resource path="res://Art/crosshair.png" type="Texture" id=4]

[ext_resource path="res://Art/emoji4.png" type="Texture" id=5]
[ext_resource path="res://Art/emoji1.png" type="Texture" id=6]
[ext_resource path="res://Art/emoji2.png" type="Texture" id=7]
[ext_resource path="res://Art/emoji3.png" type="Texture" id=8]
[ext_resource path="res://Art/emoji5.png" type="Texture" id=9]

[ext_resource path="res://Art/gun1.png" type="Texture" id=5]
[ext_resource path="res://Art/gun2.png" type="Texture" id=6]


[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 39
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Firing",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 14.0
margin_top = 437.0
margin_right = 215.0
margin_bottom = 519.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Karma: 100"

[node name="NumBulletsLabel" type="Label" parent="."]
margin_left = 856.0
margin_top = 547.0
margin_right = 1049.0
margin_bottom = 591.0
custom_fonts/font = SubResource( 4 )
text = "Ammo: 20"

[node name="HealthLabel" type="Label" parent="."]
margin_left = 17.0
margin_top = 549.0
margin_right = 218.0
margin_bottom = 631.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 5.0
margin_top = 529.0
margin_right = 1030.0
margin_bottom = 597.0
texture_progress = ExtResource( 3 )
tint_under = Color( 0.839216, 0.105882, 0.105882, 1 )
tint_over = Color( 0.811765, 0.109804, 0.109804, 1 )
tint_progress = Color( 0.984314, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 512, 300 )


[node name="Emoji1" type="Sprite" parent="."]
position = Vector2( 192, 35 )
scale = Vector2( 0.2875, 0.2875 )
texture = ExtResource( 6 )

[node name="Emoji2" type="Sprite" parent="."]
visible = false
position = Vector2( 192, 35 )
scale = Vector2( 0.2875, 0.2875 )
texture = ExtResource( 7 )

[node name="Emoji3" type="Sprite" parent="."]
visible = false
position = Vector2( 192, 35 )
scale = Vector2( 0.2875, 0.2875 )
texture = ExtResource( 8 )

[node name="Emoji4" type="Sprite" parent="."]
visible = false
position = Vector2( 192, 35 )
scale = Vector2( 0.2875, 0.2875 )
texture = ExtResource( 5 )

[node name="Emoji5" type="Sprite" parent="."]
visible = false
position = Vector2( 192, 35 )
scale = Vector2( 0.2875, 0.2875 )
texture = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 729, 487 )
frames = SubResource( 5 )
animation = "Idle"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5



[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]

